Java 16, Minecraft 17, WorldAPI 1.170